# streaming-consistency

./: .gitignore  README.md  graph.nix  graph.r  graph.sh  original-transactions.py  pkgs.nix  pom.xml  run.sh  shell.nix  simplified-transactions.py  transactions.py
differential-dataflow/: Cargo.toml  README.md  run.sh  shell.nix
differential-dataflow/src/: main.rs
flink/: README.md  docker-compose.yml  inputs.py  pom.xml  run.sh  shell.nix
flink-datastream/: README.md  pom.xml  run.sh  shell.nix
flink-datastream/src/main/java/: Demo.java  Transaction.java  TransactionDeserializationSchema.java
flink-datastream/src/main/java/net/scattered_thoughts/streaming_consistency/: Demo.java  JsonDeserializationSchema.java  TransactionsSource.java
flink-table/: README.md  run.sh  shell.nix
flink-table/src/main/java/: Demo.java
flink/docker/mysql-spend-report-init/: create-table.sql
flink/src/main/java/: Demo.java
flink/src/main/java/org/apache/flink/playgrounds/spendreport/: SpendReport.java
kafka-streams/: README.md  pom.xml  run.sh  shell.nix
kafka-streams/src/main/java/: Demo.java  JsonTimestampExtractor.java
ksqldb/: README.md  docker-compose.yml  run.sh  shell.nix  views1.sql  views2.sql
materialize/: README.md  run.sh  shell.nix  tail.py  views.sql
spark-structured-streaming/: README.md  pom.xml  run.sh  shell.nix
spark-structured-streaming/src/main/java/: Demo.java
src/main/java/: JsonTimestampExtractor.java  PageViewUntypedDemo.java  WordCountApp.java
(+1 files in other folders)
