[package]
name = "differential-dataflow-demo"
version = "0.1.0"
authors = ["Jamie Brandon <jamie@scattered-thoughts.net>"]
edition = "2018"

[dependencies]
timely = { version = "0.12.0", default-features = false, features = ["bincode"] }
differential-dataflow = "0.12.0"
chrono = "0.4.19"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"